...
                        _showCircleBadge = !_showCircleBadge;
                      }),
                      child: Text('Circle size'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('CircleBadge'),
                    badgeAnimation: badges.BadgeAnimation.size(
                      disappearanceFadeAnimationDuration: Duration(
...
                      padding: const EdgeInsets.all(8.0),
                      child: Text(
                        'circle',
                        style: TextStyle(color: Colors.white),
                      ),
...
                        _showSquareBadge = !_showSquareBadge;
                      }),
                      child: Text('Square fade'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('SquareBadge'),
                    badgeAnimation: badges.BadgeAnimation.fade(
                      disappearanceFadeAnimationDuration: Duration(
...
                      padding: const EdgeInsets.all(8.0),
                      child: Text(
                        '1111',
                        style: TextStyle(color: Colors.white),
                      ),
...
                        _showTwitterBadge = !_showTwitterBadge;
                      }),
                      child: Text('Twitter rotation'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('TwitterBadge'),
                    badgeAnimation: badges.BadgeAnimation.rotation(
                      disappearanceFadeAnimationDuration: Duration(
...
                        _showInstagramBadge = !_showInstagramBadge;
                      }),
                      child: Text('Instagram scale'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('InstagramBadge'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      disappearanceFadeAnimationDuration: Duration(
...
                        }
                      }),
                      child: Text('Change color'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('ChangeColorBadge'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      disappearanceFadeAnimationDuration: Duration(
...
                        }
                      }),
                      child: Text('Change icon'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('ChangeIconBadge'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      appearanceDisappearanceFadeAnimationEnabled: false,
...
                    }),
                    icon: Icon(Icons.add),
                    label: Text('Add'),
                  ),
                  Padding(
...
                          : null,
                      icon: Icon(Icons.remove),
                      label: Text('Remove'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('ChangeAmountBadge'),
                    badgeAnimation: badges.BadgeAnimation.slide(
                      toAnimate: false,
...
                        _showAnimMoreAppear = !_showAnimMoreAppear;
                      }),
                      child: Text('anim>appear'),
                    ),
                  ),
                  badges.Badge(
                    showBadge: _showAnimMoreAppear,
                    key: const Key('AnimationMoreAppearance'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      animationDuration: Duration(milliseconds: 500),
...
                        _showAnimLessAppear = !_showAnimLessAppear;
                      }),
                      child: Text('anim<appear'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('AnimationLessAppearance'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      animationDuration: Duration(milliseconds: 200),
...
                        _showAnimZero = !_showAnimZero;
                      }),
                      child: Text('anim=zero'),
                    ),
                  ),
                  badges.Badge(
                    showBadge: _showAnimZero,
                    key: const Key('AnimationZero'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      animationDuration: Duration.zero,
...
                        _showAppearZero = !_showAppearZero;
                      }),
                      child: Text('appear=zero'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('AppearanceZero'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      animationDuration: Duration(milliseconds: 200),
...
